add mongo container for unit tests